WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34234
[chromium] hebrew vowel marks incorrectly positioned
https://bugs.webkit.org/show_bug.cgi?id=34234
Summary
[chromium] hebrew vowel marks incorrectly positioned
Evan Martin
Reported
2010-01-27 17:04:05 PST
[chromium] hebrew vowel marks incorrectly positioned
Attachments
patch
(5.59 KB, patch)
2010-01-27 17:09 PST
,
Evan Martin
levin
: review+
levin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Evan Martin
Comment 1
2010-01-27 17:09:21 PST
Created
attachment 47578
[details]
patch
Evan Martin
Comment 2
2010-01-27 17:11:06 PST
agl: the meat of this change is the HarfbuzzSkia change -- it turns out, confusingly, that metrics->x is the offset and metrics->xOffset is the advance.
Adam Langley
Comment 3
2010-01-28 02:53:50 PST
LGTM
Evan Martin
Comment 4
2010-01-28 08:54:42 PST
Comment on
attachment 47578
[details]
patch Note this is lacking a Mac baseline. I will make one today, but if someone could review the code I'd appreciate it.
David Levin
Comment 5
2010-01-28 11:20:47 PST
Comment on
attachment 47578
[details]
patch Please add results before landing.
Eric Seidel (no email)
Comment 6
2010-02-01 16:15:04 PST
Evan isn't a committer (or is he?) I assume he's supposed to post a new patch?
Evan Martin
Comment 7
2010-02-01 16:20:31 PST
This landed in
r54020
. Not sure why the bug didn't close.
Brian Weinstein
Comment 8
2010-02-01 23:51:53 PST
Checked in new expected results for Windows w/
r54209
. Is this expected (font issue)? Or should I file a new bug about needing different results?
Evan Martin
Comment 9
2010-02-02 00:05:11 PST
Thanks for checking, and sorry for the additional work. I would expect this to differ slightly between Mac and Windows due to different fonts being available. The real value of the test is as a pixel test; I tried to make the test text make testing pass/fail possible for people who can't read Hebrew. I added this test because the code change that accompanied it fixed the test; I believe it already passed on the other WebKit ports.
Brian Weinstein
Comment 10
2010-02-02 00:06:30 PST
No problem, just wanted to make sure I wasn't masking a bug.(In reply to
comment #9
)
> Thanks for checking, and sorry for the additional work. I would expect this to > differ slightly between Mac and Windows due to different fonts being available. > The real value of the test is as a pixel test; I tried to make the test text > make testing pass/fail possible for people who can't read Hebrew. > > I added this test because the code change that accompanied it fixed the test; I > believe it already passed on the other WebKit ports.
No problem, just wanted to make sure I wasn't masking over a bug and needing to file a new one. I think there is one about different fonts on Mac and Windows, which is why there are a good number of tests on the Windows Skipped list.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug